Completed App (VERSION) 1

--- a/app/src/main/res/layout/example_patternview.xml
+++ b/app/src/main/res/layout/example_patternview.xml
@@ -8,67 +8,108 @@
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="4dp">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/patternID"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:text="A51000"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_margin="4dp">
 
-        <TextView
-            android:id="@+id/helperPattern"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/patternID"
-            android:layout_marginStart="2dp"
-            android:text="Pattern :"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/patternID"
+                android:layout_width="97dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="5dp"
+                android:text="A51000"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pattern"
-            android:layout_toRightOf="@+id/helperPattern"
-            android:layout_below="@+id/patternID"
-            android:text="1,2,3,4,5"
-            android:layout_marginLeft="4dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/helperPattern"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/patternID"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Pattern :"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/helperFormula"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/pattern"
-            android:layout_marginStart="2dp"
-            android:text="Formula :"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/pattern"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/patternID"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@+id/helperPattern"
+                android:text="123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123123"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/formula"
-            android:layout_toRightOf="@+id/helperFormula"
-            android:layout_below="@+id/pattern"
-            android:text="(a + b) ^ 2"
-            android:layout_marginLeft="4dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/helperFormula"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pattern"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Formula :"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/formula"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pattern"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@+id/helperFormula"
+                android:text="abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/helperDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/formula"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:text="Description :"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/formula"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_toRightOf="@+id/helperDescription"
+                android:text="(a + b) ^ 2"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 </androidx.cardview.widget.CardView>
